@@ -15,6 +15,10 @@ CHANGES
     - Added the missing keywords from MySQL 4.1 so they get escaped
       properly.
 
+- mssql
+    - Modified the do_begin handling in mssql to use the Cursor not
+      the Connection so it is DBAPI compatible.
+
 0.5.0
 ========
 
